k8s/namespaces/lab/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab
  namespace: lab
  labels:
    app.kubernetes.io/name: lab
    app.kubernetes.io/part-of: lab
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: lab
    app.kubernetes.io/part-of: lab
