k8s/namespaces/lab/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lab
  labels:
    app.kubernetes.io/name: lab
    app.kubernetes.io/part-of: lab

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: lab
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
